--- a/markup/prepros.cfg
+++ b/markup/prepros.cfg
@@ -41,38 +41,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "0ffc35d4": {
-          "id": "0ffc35d4",
-          "path": "index.html",
-          "output": "index.html",
-          "name": "index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "7d4732ee": {
           "id": "7d4732ee",
           "path": "css/main.css",
           "output": "css/main-dist.css",
           "name": "main.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "e44acfb1": {
-          "id": "e44acfb1",
-          "path": "css/select2.css",
-          "output": "css/select2-dist.css",
-          "name": "select2.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
@@ -350,18 +323,399 @@
           ],
           "type": "sass"
         },
-        "de676728": {
-          "id": "de676728",
-          "path": "images/logo.png",
-          "output": "images/logo.png",
-          "name": "logo.png",
+        "7dd864fb": {
+          "id": "7dd864fb",
+          "path": "dashboard.html",
+          "output": "dashboard.html",
+          "name": "dashboard.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "8e054f0a": {
+          "id": "8e054f0a",
+          "path": "login-admin.html",
+          "output": "login-admin.html",
+          "name": "login-admin.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1997f655": {
+          "id": "1997f655",
+          "path": "includes/add-agency-user.html",
+          "output": "includes/add-agency-user.html",
+          "name": "add-agency-user.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "095c6446": {
+          "id": "095c6446",
+          "path": "includes/add-property-form.html",
+          "output": "includes/add-property-form.html",
+          "name": "add-property-form.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "658f4ee3": {
+          "id": "658f4ee3",
+          "path": "includes/change-password.html",
+          "output": "includes/change-password.html",
+          "name": "change-password.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "44c2fa87": {
+          "id": "44c2fa87",
+          "path": "includes/fav-property-list.html",
+          "output": "includes/fav-property-list.html",
+          "name": "fav-property-list.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "b35c62c1": {
+          "id": "b35c62c1",
+          "path": "includes/list-agency-user.html",
+          "output": "includes/list-agency-user.html",
+          "name": "list-agency-user.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "fed694dd": {
+          "id": "fed694dd",
+          "path": "includes/property-listing.html",
+          "output": "includes/property-listing.html",
+          "name": "property-listing.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2f37d552": {
+          "id": "2f37d552",
+          "path": "includes/user-update-page.html",
+          "output": "includes/user-update-page.html",
+          "name": "user-update-page.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7b7df8ed": {
+          "id": "7b7df8ed",
+          "path": "js/accordion-plugin.js",
+          "output": "js/accordion-plugin-dist.js",
+          "name": "accordion-plugin.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "cab71e58": {
+          "id": "cab71e58",
+          "path": "js/add-propertyFrom.js",
+          "output": "js/add-propertyFrom-dist.js",
+          "name": "add-propertyFrom.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "553032e1": {
+          "id": "553032e1",
+          "path": "js/dashboard.js",
+          "output": "js/dashboard-dist.js",
+          "name": "dashboard.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "0a2d63a7": {
+          "id": "0a2d63a7",
+          "path": "js/helper.js",
+          "output": "js/helper-dist.js",
+          "name": "helper.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "64369e4a": {
+          "id": "64369e4a",
+          "path": "js/lightBox.js",
+          "output": "js/lightBox-dist.js",
+          "name": "lightBox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "bf94b91b": {
+          "id": "bf94b91b",
+          "path": "js/placeholder.js",
+          "output": "js/placeholder-dist.js",
+          "name": "placeholder.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "85f3bd6d": {
+          "id": "85f3bd6d",
+          "path": "js/tabset-plugin.js",
+          "output": "js/tabset-plugin-dist.js",
+          "name": "tabset-plugin.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "aa620ccf": {
+          "id": "aa620ccf",
+          "path": "scss/_add-agency-user.scss",
+          "output": "css/_add-agency-user.css",
+          "name": "_add-agency-user.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "4d0bb691": {
+          "id": "4d0bb691",
+          "path": "scss/_add-property-form.scss",
+          "output": "css/_add-property-form.css",
+          "name": "_add-property-form.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "7af03e35": {
+          "id": "7af03e35",
+          "path": "scss/_fancybox.scss",
+          "output": "css/_fancybox.css",
+          "name": "_fancybox.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "2a938635": {
+          "id": "2a938635",
+          "path": "scss/_list-agency-user.scss",
+          "output": "css/_list-agency-user.css",
+          "name": "_list-agency-user.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "021f9baa": {
+          "id": "021f9baa",
+          "path": "scss/_property-listing.scss",
+          "output": "css/_property-listing.css",
+          "name": "_property-listing.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "9d5f6964": {
+          "id": "9d5f6964",
+          "path": "images/user-img.png",
+          "output": "images/user-img.png",
+          "name": "user-img.png",
           "category": "IMAGE",
-          "size": 28953,
+          "size": 3127,
           "type": "png",
-          "initialSize": 28953,
+          "initialSize": 3127,
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "4634696e": {
+          "id": "4634696e",
+          "path": "images/user1.jpg",
+          "output": "images/user1.jpg",
+          "name": "user1.jpg",
+          "category": "IMAGE",
+          "size": 19426,
+          "type": "jpg",
+          "initialSize": 19426,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a87871da": {
+          "id": "a87871da",
+          "path": "images/fancybox/fancybox_overlay.png",
+          "output": "images/fancybox/fancybox_overlay.png",
+          "name": "fancybox_overlay.png",
+          "category": "IMAGE",
+          "size": 1003,
+          "type": "png",
+          "initialSize": 1003,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "305f097d": {
+          "id": "305f097d",
+          "path": "images/fancybox/fancybox_sprite.png",
+          "output": "images/fancybox/fancybox_sprite.png",
+          "name": "fancybox_sprite.png",
+          "category": "IMAGE",
+          "size": 1362,
+          "type": "png",
+          "initialSize": 1362,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "38b7a8b6": {
+          "id": "38b7a8b6",
+          "path": "images/fancybox/fancybox_sprite@2x.png",
+          "output": "images/fancybox/fancybox_sprite@2x.png",
+          "name": "fancybox_sprite@2x.png",
+          "category": "IMAGE",
+          "size": 6553,
+          "type": "png",
+          "initialSize": 6553,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9581dd54": {
+          "id": "9581dd54",
+          "path": "scss/_admin-login.scss",
+          "output": "css/_admin-login.css",
+          "name": "_admin-login.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
