--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,26 +9,6 @@
       "name": "pdashboard",
       "path": "",
       "files": {
-        "57581412": {
-          "id": "57581412",
-          "path": "markup/scss/_fancybox.scss",
-          "output": "markup/css/_fancybox.css",
-          "name": "_fancybox.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "5281ce78"
-          ],
-          "type": "sass"
-        },
         "6c22f42f": {
           "id": "6c22f42f",
           "path": "markup/dashboard.html",
@@ -88,22 +68,6 @@
           "parents": [],
           "type": "css"
         },
-        "2f21618f": {
-          "id": "2f21618f",
-          "path": "markup/js/helper.js",
-          "output": "markup/js/helper-dist.js",
-          "name": "helper.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "a08430ec": {
           "id": "a08430ec",
           "path": "markup/js/jquery-1.11.2.min.js",
@@ -125,38 +89,6 @@
           "path": "markup/js/jquery.main.js",
           "output": "markup/js/jquery.main-dist.js",
           "name": "jquery.main.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "e727b864": {
-          "id": "e727b864",
-          "path": "markup/js/select2.full.js",
-          "output": "markup/js/select2.full-dist.js",
-          "name": "select2.full.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "21007e04": {
-          "id": "21007e04",
-          "path": "markup/js/tabset-plugin.js",
-          "output": "markup/js/tabset-plugin-dist.js",
-          "name": "tabset-plugin.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -386,22 +318,6 @@
           ],
           "type": "sass"
         },
-        "962d26f0": {
-          "id": "962d26f0",
-          "path": "markup/js/add-propertyFrom.js",
-          "output": "markup/js/add-propertyFrom-dist.js",
-          "name": "add-propertyFrom.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "7ede4767": {
           "id": "7ede4767",
           "path": "markup/js/dashboard.js",
@@ -431,33 +347,6 @@
           "height": 0,
           "width": 0
         },
-        "a5668874": {
-          "id": "a5668874",
-          "path": "markup/js/accordion-plugin.js",
-          "output": "markup/js/accordion-plugin-dist.js",
-          "name": "accordion-plugin.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "74fe6bdd": {
-          "id": "74fe6bdd",
-          "path": "markup/includes/add-property-form.html",
-          "output": "markup/includes/add-property-form.html",
-          "name": "add-property-form.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "2ca98ba4": {
           "id": "2ca98ba4",
           "path": "markup/images/user1.jpg",
@@ -470,115 +359,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "86f0790d": {
-          "id": "86f0790d",
-          "path": "markup/js/placeholder.js",
-          "output": "markup/js/placeholder-dist.js",
-          "name": "placeholder.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "0f2bb790": {
-          "id": "0f2bb790",
-          "path": "markup/includes/property-listing.html",
-          "output": "markup/includes/property-listing.html",
-          "name": "property-listing.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "f385d719": {
-          "id": "f385d719",
-          "path": "markup/includes/add-agency-user.html",
-          "output": "markup/includes/add-agency-user.html",
-          "name": "add-agency-user.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "9e3e0dbf": {
-          "id": "9e3e0dbf",
-          "path": "markup/includes/list-agency-user.html",
-          "output": "markup/includes/list-agency-user.html",
-          "name": "list-agency-user.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "ca5e6654": {
-          "id": "ca5e6654",
-          "path": "markup/scss/_add-agency-user.scss",
-          "output": "markup/css/_add-agency-user.css",
-          "name": "_add-agency-user.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "5281ce78"
-          ],
-          "type": "sass"
-        },
-        "5870b89d": {
-          "id": "5870b89d",
-          "path": "markup/scss/_add-property-form.scss",
-          "output": "markup/css/_add-property-form.css",
-          "name": "_add-property-form.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "5281ce78"
-          ],
-          "type": "sass"
-        },
-        "e1b5f9ad": {
-          "id": "e1b5f9ad",
-          "path": "markup/scss/_list-agency-user.scss",
-          "output": "markup/css/_list-agency-user.css",
-          "name": "_list-agency-user.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "5281ce78"
-          ],
-          "type": "sass"
         },
         "9fe76080": {
           "id": "9fe76080",
@@ -600,11 +380,22 @@
           ],
           "type": "sass"
         },
-        "ff3946ee": {
-          "id": "ff3946ee",
-          "path": "markup/scss/_user-registeration.scss",
-          "output": "markup/css/_user-registeration.css",
-          "name": "_user-registeration.scss",
+        "2bfb1959": {
+          "id": "2bfb1959",
+          "path": "markup/login-admin.html",
+          "output": "markup/login-admin.html",
+          "name": "login-admin.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "8ae0d39a": {
+          "id": "8ae0d39a",
+          "path": "markup/scss/_admin-login.scss",
+          "output": "markup/css/_admin-login.css",
+          "name": "_admin-login.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -620,88 +411,11 @@
           ],
           "type": "sass"
         },
-        "96a58f24": {
-          "id": "96a58f24",
-          "path": "markup/includes/user-update-page.html",
-          "output": "markup/includes/user-update-page.html",
-          "name": "user-update-page.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "56d9c206": {
-          "id": "56d9c206",
-          "path": "markup/includes/change-password.html",
-          "output": "markup/includes/change-password.html",
-          "name": "change-password.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "c8c387b0": {
-          "id": "c8c387b0",
-          "path": "markup/js/lightBox.js",
-          "output": "markup/js/lightBox-dist.js",
-          "name": "lightBox.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "a6168a3f": {
-          "id": "a6168a3f",
-          "path": "markup/images/fancybox/fancybox_overlay.png",
-          "output": "markup/images/fancybox/fancybox_overlay.png",
-          "name": "fancybox_overlay.png",
-          "category": "IMAGE",
-          "size": 1003,
-          "type": "png",
-          "initialSize": 1003,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "91f9e9d1": {
-          "id": "91f9e9d1",
-          "path": "markup/images/fancybox/fancybox_sprite.png",
-          "output": "markup/images/fancybox/fancybox_sprite.png",
-          "name": "fancybox_sprite.png",
-          "category": "IMAGE",
-          "size": 1362,
-          "type": "png",
-          "initialSize": 1362,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "558af824": {
-          "id": "558af824",
-          "path": "markup/images/fancybox/fancybox_sprite@2x.png",
-          "output": "markup/images/fancybox/fancybox_sprite@2x.png",
-          "name": "fancybox_sprite@2x.png",
-          "category": "IMAGE",
-          "size": 6553,
-          "type": "png",
-          "initialSize": 6553,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "7c9401e6": {
-          "id": "7c9401e6",
-          "path": "markup/includes/fav-property-list.html",
-          "output": "markup/includes/fav-property-list.html",
-          "name": "fav-property-list.html",
+        "a468abd6": {
+          "id": "a468abd6",
+          "path": "markup/includes/pendingForAdmin-property-holder.html",
+          "output": "markup/includes/pendingForAdmin-property-holder.html",
+          "name": "pendingForAdmin-property-holder.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
