--- a/prepros.cfg
+++ b/prepros.cfg
@@ -707,6 +707,42 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "9bec0499": {
+          "id": "9bec0499",
+          "path": "markup/js/customSelect.js",
+          "output": "markup/js/customSelect-dist.js",
+          "name": "customSelect.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a232c0de": {
+          "id": "a232c0de",
+          "path": "markup/scss/_customSelect.scss",
+          "output": "markup/css/_customSelect.css",
+          "name": "_customSelect.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "5281ce78"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
