advanced search page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -743,6 +743,17 @@
             "5281ce78"
           ],
           "type": "sass"
+        },
+        "d7437d48": {
+          "id": "d7437d48",
+          "path": "markup/includes/advanced-search-page.html",
+          "output": "markup/includes/advanced-search-page.html",
+          "name": "advanced-search-page.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
